Adding vector and Ray

--- a/RayTracer/RayTracer.fsproj
+++ b/RayTracer/RayTracer.fsproj
@@ -7,6 +7,8 @@
 
     <ItemGroup>
         <Compile Include="Ppm.fs" />
+        <Compile Include="Vector.fs" />
+        <Compile Include="Ray.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
