Adding initial scene

--- a/RayTracer/RayTracer.fsproj
+++ b/RayTracer/RayTracer.fsproj
@@ -9,6 +9,7 @@
         <Compile Include="Ppm.fs" />
         <Compile Include="Vector.fs" />
         <Compile Include="Ray.fs" />
+        <Compile Include="Shape.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
