--- a/RayTracer/RayTracer.fsproj
+++ b/RayTracer/RayTracer.fsproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <Compile Include="Colour.fs" />
         <Compile Include="Vector.fs" />
+        <Compile Include="Point.fs" />
         <Compile Include="Ppm.fs" />
         <Compile Include="Ray.fs" />
         <Compile Include="Shape.fs" />
