Creating a scene record

--- a/RayTracer/RayTracer.fsproj
+++ b/RayTracer/RayTracer.fsproj
@@ -15,6 +15,7 @@
         <Compile Include="Shader.fs" />
         <Compile Include="Shape.fs" />
         <Compile Include="ViewPlane.fs" />
+        <Compile Include="Scene.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
