--- a/RayTracer/RayTracer.fsproj
+++ b/RayTracer/RayTracer.fsproj
@@ -9,7 +9,7 @@
         <Compile Include="Colour.fs" />
         <Compile Include="Vector.fs" />
         <Compile Include="Point.fs" />
-        <Compile Include="Ppm.fs" />
+        <Compile Include="Image.fs" />
         <Compile Include="Ray.fs" />
         <Compile Include="Light.fs" />
         <Compile Include="Shader.fs" />
@@ -18,6 +18,10 @@
         <Compile Include="ViewPlane.fs" />
         <Compile Include="Scene.fs" />
         <Compile Include="Program.fs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="System.Drawing.Common" Version="4.7.0-preview2.19523.17" />
     </ItemGroup>
 
 </Project>
